# docuchat-py

./: .gitignore  README.md  config.py  dbmanager.py  logger.py  main.py  models.py  pyproject.toml  seed_db.py  utils.py
.github/workflows/: ci.yml
api/v1/: __init__.py  _document.py  admin.py  auth.py  conversation.py  document.py  user.py  webhook.py
auth/: __init__.py  auth.py  auth_errors.py
events/: __init__.py  event_handlers.py
middleware/: exception_handlers.py  logging_middleware.py  webhook.py
migrations/: env.py  script.py.mako
migrations/versions/: 78d866c7aaa8_add_roles_relation_to_user_model.py  7b002935b816_add_deleted_at_to_document_for_soft_.py  ac2c0d458721_add_refresh_token_table.py  cdb3eefc30c6_add_webhook_event_table.py  d34dd121c6be_update_userrole_relation.py  e123a64efcf1_update_id_feild_for_webhook_event_table.py  e33751c309bc_initial_migrations.py  e4229b0e3b08_add_is_default_to_userrole.py  f619f3606c51_add_deleted_by_feild.py  fca2f078daa6_add_task_id_feild_to_document.py
models/: dbmanager.py
queues/: celery_task.py
requirements/: base.txt
schemas/: __init__.py  admin.py  auth.py  conversation.py  document.py
services/: breaker.py  openai.py  retry.py
tests/: conftest.py  test_admin.py  test_auth.py  test_conversation.py  test_document.py  test_document_events.py  test_document_query.py  test_main.py  test_user.py
