[project]
name = "docuchat-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pydantic[dotenv]>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "alembic==1.18.4",
    "fastapi[standard]==0.135.3",
    "sqlmodel==0.0.38",
]
