[project]
name = "docuchat-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "fastapi-events>=0.12.2",
    "greenlet>=3.4.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pydantic>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "celery[redis]>=5.6.3",
    "asgiref>=3.11.1",
    "flower>=2.0.1",
    "requests>=2.33.1",
    "pybreaker>=1.2.0",
]

[dependency-groups]
dev = [
    "alembic==1.18.4",
    "fastapi[standard]==0.135.3",
    "ruff>=0.15.11",
    "sqlmodel==0.0.38",
]
